# snowid-postgres

./: .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  Trunk.toml  pg_snowid.control  release-please-config.json  snowid-postgres.control  snowid.control
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  release.yml
images/cloudnative-pg/: Dockerfile  README.md
images/dev/: Dockerfile  dummy.rs  postgresql.conf
images/pg/: Dockerfile
images/pgsnowid-cloudnative/: replace-pg-version.sh
images/snowid-cloudnative/: in.Dockerfile  postgresql.conf
images/snowid-cloudnative-pg/: Dockerfile  README.md
images/snowid-dev/: Dockerfile  postgresql.conf
images/snowid-pg/: Dockerfile  dummy.rs  lib.rs
sql/: pg_snowid--0.0.1.sql  pg_snowid--0.2.0--0.2.5.sql  pg_snowid--0.2.6--0.3.0.sql  pg_snowid--0.3.0--0.4.0.sql  pg_snowid--0.4.0--0.4.1.sql  pg_snowid--0.4.1--0.5.0.sql  pg_snowid--0.5.0--0.6.0.sql  pg_snowid--0.6.0--0.6.1.sql  pg_snowid--0.6.1--0.7.0.sql  pg_snowid--0.7.0--1.0.0.sql  pg_snowid--0.7.0--1.0.1.sql  pg_snowid--1.0.1--2.0.0.sql  pg_snowid--2.0.0--2.1.0.sql  pg_snowid--2.1.0--2.1.1.sql  pg_snowid--2.1.0--2.1.2.sql  pg_snowid--2.1.1--2.1.2.sql  pg_snowid--2.1.2--.sql  pg_snowid--2.1.2--2.2.0.sql  pg_snowid--2.2.0--2.3.0.sql  pg_snowid--2.3.0--2.3.1.sql  pg_snowid--2.3.1--2.3.2.sql  pg_snowid--2.3.2--2.3.3.sql  pg_snowid--2.3.3--2.3.4.sql  pg_snowid--2.3.4--2.3.5.sql  pg_snowid--2.3.5--2.3.6.sql  pg_snowid--2.3.6--2.3.7.sql  pg_snowid--2.3.7--2.3.8.sql  snowid--0.0.1.sql
src/: lib.rs
tests/: packaged_sql_files.rs
