[package]
name = "pg_snowid"
version = "1.0.1"
edition = "2024"
rust-version = "1.90.0"

authors = ["Maksim Sasnouski <maksim@rixl.com>"]
description = "Generate Snowflake-like IDs with speed and thread-safety in PostgreSQL"

license = "MIT"
readme = "README.md"
keywords = ["snowflake", "id", "uuid", "postgres", "pgrx"]
categories = ["database"]

documentation = "https://github.com/qeeqez/snowid-postgres"
homepage = "https://github.com/qeeqez/snowid-postgres"
repository = "https://github.com/qeeqez/snowid-postgres"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_snowid"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg18"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg_test = []

[dependencies]
pgrx = "0.16.1"
snowid = "1.0.1"
heapless = "0.9.2"

[dev-dependencies]
pgrx-tests = "0.16.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = true
codegen-units = 1
