[package]
name = "pg_snowid"
version = "2.3.4"
edition = "2024"
resolver = "3"
rust-version = "1.90.0"

authors = ["Maksim Sasnouski <maksim@rixl.com>"]
description = "Generate Snowflake-like IDs with speed and thread-safety in PostgreSQL"

license = "MIT"
readme = "README.md"
keywords = ["snowflake", "id", "uuid", "postgres", "pgrx"]
categories = ["database"]

documentation = "https://github.com/qeeqez/snowid-postgres"
homepage = "https://github.com/qeeqez/snowid-postgres"
repository = "https://github.com/qeeqez/snowid-postgres"

[lib]
crate-type = ["cdylib"]


[features]
default = ["pg18"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]

pg_test = []

[dependencies]
pgrx = "0.18.0"
snowid = "2.0.3"
heapless = "0.9.2"

[dev-dependencies]
pgrx-tests = "0.18.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = false
codegen-units = 1
